<resources>
    <string name="app_name">MBLabsChallenge</string>
    <string name="login_welcome_banner">Bem vindo</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_enter_button">Entrar</string>
    <string name="login_register_button">Cadastre-se</string>
    <string name="register_main_banner">Cadastre-se</string>
    <string name="register_back_button">Voltar</string>
    <string name="register_sign_up_button">Registrar</string>
    <string name="event_details_price_placeholder">Valor do evento:</string>
    <string name="event_details_state_placeholder">Estado do evento:</string>
    <string name="event_details_city_placeholder">Cidade do evento:</string>
    <string name="event_details_type_placeholder">Tipo do evento:</string>
    <string name="event_details_desc_placeholder">Descrição</string>
    <string name="event_details_half_entry_placeholder">Meia entrada</string>
    <string name="event_details_half_entry_hint">CIA</string>
    <string name="event_details_payment_method_hint">Metodo de pagamento</string>
    <string name="event_details_button_buy_text">Comprar</string>
    <string name="event_details_card_number_hint">Numero do cartao</string>
    <string name="loading_dialog_disclaimer">Um Momento estamos carregando suas informações</string>
    <string name="event_details_vacine_button">Comprovante de vacinação</string>
    <string name="confirmation_message">Vamos verificar todas as informações, com tudo confirmado enviaremos o ingresso para seu email cadastrado</string>
</resources>