<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventdetails.ui.fragment.EventDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_event_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_event_image"
                tools:text="Fortal" />

            <TextView
                android:id="@+id/tv_event_price_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_price_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name" />

            <TextView
                android:id="@+id/tv_event_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_event_price_placeholder"
                app:layout_constraintTop_toBottomOf="@id/tv_event_name"
                tools:text="50 R$" />

            <TextView
                android:id="@+id/tv_event_state_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_state_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_price_placeholder" />

            <TextView
                android:id="@+id/tv_event_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_event_state_placeholder"
                app:layout_constraintTop_toBottomOf="@id/tv_event_price"
                tools:text="Ceará" />

            <TextView
                android:id="@+id/tv_event_city_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_city_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_state_placeholder" />

            <TextView
                android:id="@+id/tv_event_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_event_city_placeholder"
                app:layout_constraintTop_toBottomOf="@id/tv_event_state"
                tools:text="Fortaleza" />

            <TextView
                android:id="@+id/tv_event_type_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_type_placeholder"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_city_placeholder" />

            <TextView
                android:id="@+id/tv_event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/tv_event_type_placeholder"
                app:layout_constraintTop_toBottomOf="@id/tv_event_city"
                tools:text="Empresa" />


            <TextView
                android:id="@+id/tv_event_desc_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_desc_placeholder"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_type_placeholder" />

            <TextView
                android:id="@+id/tv_event_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_desc_placeholder"
                tools:text="@tools:sample/lorem[30]" />

            <CheckBox
                android:id="@+id/cb_half_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_half_entry_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_event_desc" />

            <EditText
                android:id="@+id/et_half_entry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/event_details_half_entry_hint"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/tv_payment_method_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_half_entry" />

            <TextView
                android:id="@+id/tv_payment_method_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/event_details_payment_method_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_half_entry" />

            <Spinner
                android:id="@+id/spr_payment_method"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_payment_method_hint" />

            <EditText
                android:id="@+id/et_card_fields"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/event_details_card_number_hint"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spr_payment_method" />

            <ImageView
                android:id="@+id/iv_vacine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:visibility="gone"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@id/mbt_buy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_card_fields" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbt_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/event_details_vacine_button"
                app:layout_constraintStart_toEndOf="@id/iv_vacine"
                app:layout_constraintTop_toBottomOf="@id/et_card_fields" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbt_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="false"
                android:text="@string/event_details_button_buy_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mbt_photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>